test/tests/InnerFunctionNoReturn.expected
InnerFunctionNoReturn.panda:2:5: error: functions must have a return type
1 error
