test/tests/InnerFunctionNoReturn.panda
method main() {
    function f(x:Int) {
    }
}
